# qttools

./: .gitignore  CMakeLists.txt  README.md
src/linguist/: CMakeLists.txt
src/linguist/linguist/: CMakeLists.txt  batchtranslationdialog.cpp  configdialog.cpp  configdialog.h  configdialog.ui  configuration.cpp  configuration.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageeditor.cpp  messageeditor.h  messagemodel.cpp  messagemodel.h  phrase.cpp  phrase.h  sourcecodeview.cpp  sourcecodeview.h  substitutionmodel.cpp  substitutionmodel.h  translationsettingsdialog.cpp
src/linguist/shared/: localeutils.cpp  localeutils.h  numerus.cpp  po.cpp  qm.cpp  qph.cpp  translator.cpp  translator.h  ts.cpp  xliff.cpp
